--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "uuid": "^10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
