--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "react-smooth": "^4.0.4",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "styled-components": "^6.1.18",
-    "web-vitals": "^2.1.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
