fix: corrigir titulo para RapMarketing e parametro da rota de metricas

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Rapmarketing",
-  "name": "Rapmarketing - Smart Links & Presaves",
+  "short_name": "RapMarketing",
+  "name": "RapMarketing - Smart Links & Presaves",
   "icons": [
     {
       "src": "favicon.ico",
